minikube/lookup-cluster-mode/networking/yorkie-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: yorkie-gateway
  namespace: yorkie
spec:
  # use istio default controller
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
