minikube/lookup-cluster-mode/networking/virtual-service-yorkie.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: yorkie
  namespace: yorkie
spec:
  hosts:
    - "*"
  gateways:
    - yorkie-gateway
  http:
    # route to yorkie sdk service on "/yorkie.v1.YorkieService" uri prefix
    - name: yorkie-service
      match:
        - uri:
            prefix: "/yorkie.v1.YorkieService"
      route:
        - destination:
            host: yorkie
            port:
              number: 11101
      # set cors policy for grpc-web protocols
      corsPolicy: &apiCorsPolicy
        allowOrigin:
          - "*"
        allowMethods:
          - POST
          - GET
          - OPTIONS
          - PUT
          - DELETE
        allowHeaders:
          - grpc-timeout
          - content-type
          - keep-alive
          - user-agent
          - cache-control
          - content-type
          - content-transfer-encoding
          - custom-header-1
          - x-accept-content-transfer-encoding
          - x-accept-response-streaming
          - x-user-agent
          - x-grpc-web
          - authorization
          - x-api-key
        maxAge: 1728s
        exposeHeaders:
          - custom-header-1
          - grpc-status
          - grpc-message
        allowCredentials: true
    # route to yorkie admin service on "/yorkie.v1.AdminService" uri prefix
    - name: yorkie-admin-service
      match:
        - uri:
            prefix: "/yorkie.v1.AdminService"
      route:
        - destination:
            host: yorkie
            port:
              number: 11103
      # refer to apiCorsPolicy anchor above
      corsPolicy: *apiCorsPolicy
